...
    return list;
  }

  @override
  Widget build(BuildContext context) {
    return GridView.count(
      key: Key("grid-view"),
      crossAxisCount: 2,
      children: _generateChild(context, widget.category),
    );
  }
}
