...
      getFoodDetailById(widget.item.idMeal).then((v) {
        setState(() {
          _foodModel = FoodModel.fromJson(v.toJson());
          WidgetsBinding.instance
            .addPostFrameCallback((_) => _scaffoldState.showSnackBar(
              SnackBar(
                content: Text("You choose ${v.strMeal}", key: Key("snackbar-detail-name"),),
                action: SnackBarAction(
                  label: "Go Back",
                  onPressed: () {
                    Navigator.pop(context);
                  },
                ),
...
